premiere version ivan

--- a/goog.html
+++ b/goog.html
@@ -1,1 +1,39 @@
-goog.html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+        <link rel="stylesheet" href="style.css" />
+	<title>Google</title>
+</head>
+<body>
+<nav>
+	<a href="https:Google.com">E-mail </a>
+	<a href="https:gmail.com">Images </a>
+	<img src="Images/Applis.png">
+	<a href="Google">Connexion </a>
+
+</nav>
+
+<section>
+
+<p>
+<img src="Images/googlelogo.png" alt="Photo Google">
+</p>
+
+<form method="post" action="traitement.php">
+	<p>
+		<input type="search" />
+	</p>
+
+	<p>
+		<input type="submit" value="Recherche Google"/>
+		<input type="submit" value="J'ai de la chance"/>
+	</p>
+
+
+	
+</form>
+
+</section>
+</body>
+</html>
