--- a/goog.html
+++ b/goog.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
+
+	<head>
+		<meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
-	<title>Google</title>
-</head>
-<body>
-<nav>
-	<a href="https:Google.com">E-mail </a>
-	<a href="https:gmail.com">Images </a>
-	<img src="Images/Applis.png">
-	<a href="Google">Connexion </a>
+		<title>Google</title>
+	</head>
 
-</nav>
+	<body>
 
-<section>
+	<nav id="conteneur">
 
-<p>
-<img src="Images/googlelogo.png" alt="Photo Google">
-</p>
+	<a class="element" href="https://accounts.google.com/signin/v2/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Ftab%3Dwm&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Gmail</a>
+	<a class="element" href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a>
+	<a class="element" href="https://www.google.fr/intl/fr/about/products/"><img src="Images/Applis.png"/></a>
+	<a class="element" href="https://accounts.google.com/signin/v2/identifier?hl=fr&passive=true&continue=https%3A%2F%2Fwww.google.fr%2F%3Fgfe_rd%3Dcr%26dcr%3D0%26ei%3DSNrEWrv1KtCZX_zYoJAC&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Connexion </a>
 
-<form method="post" action="traitement.php">
-	<p>
-		<input type="search" />
-	</p>
+	</nav>
 
-	<p>
-		<input type="submit" value="Recherche Google"/>
-		<input type="submit" value="J'ai de la chance"/>
-	</p>
+	<section id="conteneurb">
 
+	<div class="imagegoogle">
+	<img src="Images/logomini_google.png" alt="Photo Google">
+	</div>
 
-	
-</form>
+	<div class="formulaire">
+		<form method="post" action="traitement.php">
+			<p class="div_barre">
+			<input class="barre" type="search" />
+			</p>
 
-</section>
-</body>
+			<p class="boutons">	
+			<input class="boutona" type="submit" value="Recherche Google"/>
+			<input class="boutonb" type="submit" value="J'ai de la chance"/>
+			</p>	
+		</form>
+	</div>
+
+	</section>
+
+	<footer>
+		<div class="premiereligne">France</div>
+		<div class="deuxiemeligne">
+		<span class="part1">
+			<a class="lien" href="https://www.google.fr/intl/fr_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a>
+			<a class="lien" href="https://www.google.fr/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Entreprise</a>
+			<a class="lien" href="https://www.google.fr/intl/fr_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">A propos</a>
+		</span>
+		<span class="part2">
+			<a class="lien" href="https://support.google.com/websearch/answer/7585859?p=fr_consumer_info&hl=fr&fg=1&visit_id=0-636584474643381910-3840611403&rd=1">Info consommateurs</a>
+			<a class="lien" href="https://policies.google.com/privacy?hl=fr&gl=fr">Confidentialité</a>
+			<a class="lien" href="https://policies.google.com/terms?hl=fr&gl=fr">Conditions</a>
+			<a class="lien" href="https://www.google.fr/preferences?hl=fr">Paramètres</a>
+		</span>
+	</div>
+	</footer>
+	</body>
 </html>
